--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
 gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.6"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -21,6 +22,7 @@ django-stubs = "^4.2.0"
 djangorestframework-stubs = "^3.14.0"
 mypy = "^1.2.0"
 ipython = "^8.13.2"
+drf-spectacular = "^0.26.2"
 
 [build-system]
 requires = ["poetry-core"]
