--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
+djangorestframework-camel-case = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
