--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 djangorestframework-camel-case = "^1.4.2"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
