--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,9 @@ services:
       - db
     restart: always
     container_name: hackathon-server
+    volumes:
+      - ./static:/app/src/static
+      - ./media:/app/src/media
     env_file: .env
     ports:
       - ${SERVER_PORT-8080}:8000
