--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 djangorestframework-camel-case = "^1.4.2"
 djangorestframework-simplejwt = "^5.2.2"
+pillow = "^9.5.0"
+whitenoise = "^6.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
