--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ djangorestframework-camel-case = "^1.4.2"
 djangorestframework-simplejwt = "^5.2.2"
 pillow = "^9.5.0"
 whitenoise = "^6.4.0"
+django-cors-headers = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
