--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+django = "^4.2.3"
 djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
@@ -17,7 +18,8 @@ djangorestframework-simplejwt = "^5.2.2"
 pillow = "^9.5.0"
 whitenoise = "^6.4.0"
 django-cors-headers = "^4.1.0"
-django = "^4.2.3"
+celery = "^5.3.1"
+redis = "^4.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
